# gpbeam

./: BUILD  README.md  pyproject.toml
src/GuineaPigWrapper_ccaliari/: GuineaPig.py  __init__.py  config.py
src/gpbeam/: DumpCoordinates.py  GuineaPig.py  Result.py  Settings.py  __init__.py  config.py
tests/: Scan_Lumi_vs_Beta.py
